--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.50.2",
     "@opentelemetry/core": "^1.26.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.53.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.53.0",
     "@opentelemetry/exporter-zipkin": "^1.26.0",
     "@opentelemetry/instrumentation-document-load": "^0.40.0",
@@ -34,6 +35,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@vercel/otel": "^1.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
