(1) Install open telemetry pino-http package (use to send logs).  (2)Updated service name & configure ports in order to send data to open telemetry collector. (3) Setup collector file to send traces to both new relic and zipkin and all else to new relic (4) collector stay consistent with instrumentation.js (5) Updated docker compose yaml file t start collector and zipkin

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - ./otel_collector_config.yaml:/otel_collector_config.yaml
     ports:
       - "4317:4317"  # OTLP gRPC port
-      - "55681:55681"  # OTLP HTTP port
+      - "4318:4318"  # OTLP HTTP port (make sure to add this for metrics and traces)
     command: ["--config=/otel_collector_config.yaml"]
 
   zipkin:
