--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.50.2",
     "@opentelemetry/core": "^1.26.0",
+    "@opentelemetry/exporter-metrics-otlp-grpc": "^0.53.0",
     "@opentelemetry/exporter-metrics-otlp-http": "^0.53.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.53.0",
     "@opentelemetry/exporter-zipkin": "^1.26.0",
